<resources>
    <string name="app_name">signuplogin</string>
    <string name="welcome">WELCOME</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password...</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email...</string>
    <string name="Log_in2">Log in</string>
    <string name="sign_up">sign up</string>
    <string name="button1">Button</string>
    <string name="sign_up1">SIGN UP</string>
</resources>